employee list alignment fix and loader fix

--- a/MobileApp/www/css/style.css
+++ b/MobileApp/www/css/style.css
@@ -290,7 +290,7 @@ ion-scroll[scrollX] {
     overflow: hidden;
 
     .scroll-item {
-      display: inline-block;
+      display: inline-block !important;
     }
 
     .selectable-icon{
@@ -304,6 +304,8 @@ ion-scroll[scrollX] {
     }
   }
 
+
+
   ion-scroll[scroll-avatar]{
     height: 60px;
   }
@@ -313,7 +315,9 @@ ion-scroll[scrollX] {
     display:none;
   }
 
-
+ .scrollCon .scroll-item {
+        display: inline-block !important;
+      }
 button.pop-icon
 {
       border: 1px solid #FFC107 !important;
